force-app/main/default/objects/Invoice_Line__c/fields/Billed_For_Account__c.field-meta.xml
<CustomField>
    <fullName>Billed_For_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the invoice line to the account being billed; used for identifying the customer associated with the line item.</description>
    <label>Billed For Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>