force-app/main/default/objects/Invoice_Line__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Defines the billing type (e.g., self-pay, paid by CP) that who is responsible for paying this amount; used for billing logic and reporting.</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Pay</fullName>
            </value>
            <value>
                <fullName>Paid By Coordinating Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>