force-app/main/default/objects/Invoice_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Links the line item to its parent invoice; used to group multiple line items under a single invoice.</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>