force-app/main/default/objects/Invoice_Line__c/fields/Invoice_For_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Invoice_For_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice For Upgrade</label>
    <type>Checkbox</type>
</CustomField>