force-app/main/default/objects/Invoice_Line__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Stores the unit price of the product or service; used for pricing calculations.</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>